# khadga

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  RATIONALE.md  README.md  build-docker.sh  build.sh  docker-compose.yml  docker-stack.yml  khadga-claim0-persistentvolumeclaim.yaml  khadga-deployment.yaml  khadga-service.yaml  kustomization.yaml  mongodb-deployment.yaml  package-lock.json  rustfmt.toml
docker/: Dockerfile.dev
docker/builder/: Dockerfile
docker/khadga/: Dockerfile
docker/mimir/: Dockerfile
docs/: book.toml  chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  index.html  print.html  searchindex.js  searchindex.json
docs/chapter2/: chapter_2.html  chapter_2_1.html  chapter_2_2.html  chapter_2_3.html
docs/chapter3/: chapter_3.html  chapter_3_1.html  chapter_3_2.html  chapter_3_3.html  chapter_3_4.html
docs/chapter4/: chapter_4.html  chapter_4_1.html  chapter_4_2_md  chapter_4_2_md.html  chapter_4_3.html  chapter_4_4.html
docs/chapter5/: chapter_5_1.html  chapter_5_2.html  chapter_5_3.html  chapter_5_4.html  chapter_5_5.html
docs/chapter6/: chapter_6.html
docs/chapter7/: chapter_7.html
docs/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md
khadga/: .env  Cargo.toml  README.md  diesel.toml
khadga/config/: dev.yml  khadga-dev.yml  khadga-stack.yml  khadga-test-pvt.key  khadga-test.crt
khadga/db/: down.sql  up.sql
khadga/migrations/2020-03-23-212859_create_posts/: up.sql
khadga/migrations/2020-03-30-010002_posts/: up.sql
khadga/migrations_foo/2020-03-29-232729_users/: up.sql
khadga/migrations_foo/2020-03-29-232747_comments/: up.sql
khadga/migrations_foo/2020-03-29-232750_accounts/: up.sql
khadga/migrations_foo/2020-03-29-232755_uploads/: up.sql
khadga/src/: auth.rs  chat-old.rs  chat.rs  config.rs  data.rs  db.rs  lib.rs  main.rs  message.rs  pgdb.rs  routing.rs  signaling.rs  state.rs
khadga/src/jwt/: jwt.rs
khadga/src/pgdb/: mod.rs  models.rs  pgdb.rs  schema.rs
khadga/tests/: test-db.rs
khadga/tests/common/: mod.rs
kubernetes/: khadga-deployment.yaml  khadga-dev-deployment.yaml  kustomization.yaml  mongodb-service.yaml
kubernetes/custom/: ingress-service.yaml  khadga-dev-cluster-ip.yaml  khadga-dev-deployment.yaml  managed-certificate.yaml  mimir-deployment.yaml  mimir-node-ip.yaml
mimir/: .env  .snyk  package-lock.json  package.json
mimir/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts
mimir/test/: app.e2e-spec.ts
noesis/: Cargo.toml  LICENSE_MIT  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
noesis/js/: app.js  custom_elements.js
noesis/js/components/: navbar.js
noesis/src/: components.rs  lib.rs  utils.rs  webrtc.rs
noesis/static/: index.html
noesis/tests/: web.rs
noesis/ts/components/: navbar.tsx
vision/: .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  wdio.conf.js  webpack.config.js
vision-tests/: package-lock.json  package.json
vision-tests/cypress/integration/: first.spec.ts  vision-login.spec.ts
vision-tests/cypress/plugins/: index.js
vision-tests/src/: auth-helpers.ts  locators.ts
vision/js/: custom_elements.js
vision/src/: app.tsx  bootstrap.js  components.rs  index.html  lib.rs  react.rs
vision/src/components/: blog.tsx  common-interfaces.ts  common-modal.ts  containers.tsx  editor.tsx  forms.tsx  google-signin.tsx  (+13 more)
vision/static/: index.html  shadow.css  style.css  styles.css
vision/tests/: app.rs
vision/ts/: app.tsx  custom_elements.ts
(+27 files in other folders)
