[package]
authors = ["Sean Toner"]
edition = "2018"
name = "khadga"
version = "0.1.0"
[dependencies]
bson = "0.14.1"
config = "0.10.1"
env_logger = "0.7.1"
futures = "0.3.4"
jsonwebtoken = "7.1"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde_json = "1.0.48"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.reqwest]
features = ["json"]
version = "0.10"

[dependencies.serde]
features = ["derive"]
version = "1.0.105"

[dependencies.tokio]
features = ["macros"]
version = "0.2"

[dependencies.warp]
features = ["tls"]
version = "0.2.2"
