[package]
authors = ["Sean Toner"]
edition = "2018"
name = "khadga"
version = "0.1.0"

[dependencies]
config = "0.10.1"
env_logger = "0.7.1"
futures = "0.3.5"
jsonwebtoken = "7.2.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde_json = "1.0.57"
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4"] }
juniper = "0.14"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.reqwest]
features = ["json"]
version = "0.10"

[dependencies.serde]
features = ["derive"]
version = "1.0.115"

[dependencies.tokio]
features = ["macros", "rt-threaded"]
version = "0.2"

[dependencies.warp]
features = ["tls"]
version = "0.2.4"
