[package]
name = "noesis"
version = "0.1.0"
authors = ["Sean Toner <placeoftheway@gmail.com>"]
edition = "2018"
description = "WebRTC and math libraries for khadga"
repository = "https://github.com/rarebreed/khadga"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.8"
futures = { version = "0.3.1", features = ["async-await", "compat"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

js-sys = "0.3.35"

[dependencies.web-sys]
version = "0.3.33"
features = [
	"Navigator",
	"Document",
	"MediaDevices",
	"HtmlElement",
	"Window",
	"MediaStream",
	"MediaDeviceInfo",
	"MediaStreamConstraints",
	"console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
